# RatingSite

./: .gitignore  init_db.py  main.py  pyproject.toml
config/: ratingsite.sample.yaml
ratings/: db.py  serializers.py  services.py
ratingsite/: db.py  routes.py  settings.py
users/: authorization.py  db.py  middlewares.py  routes.py  serializers.py  services.py  views.py
